# rstwitter

./: Cargo.toml  README.md  api.sh  commands.sh  docker-compose.sh  docker-compose.yml
docker/: Dockerfile.rust-dev
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  tweet.rs  user.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20230225_145228_create_user.rs  m20230225_145228_create_users.rs  m20230402_122231_create_tweet.rs
sql/entrypoint/: 001_database.sql
src/: lib.rs  main.rs
src/domain/errors/: mod.rs
src/handlers/: mod.rs  tweets.rs  users.rs
src/repositories/: tweets.rs  users.rs
src/usecases/: tweet.rs  user.rs
